--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "element-plus": "^2.2.14",
+    "pinia": "^2.0.20",
     "vue": "^3.2.37",
     "vue-router": "^4.1.4"
   },
